<resources>
    <string name="app_name">taghunt</string>
    <string name="sv_app_name">jagejakt</string>

    //Join game activity
    <string name="username_entry_field">Username</string>
    <string name="hint_username_entry_text">Username</string>

    //Main activity
    <string name="create_game_button">Create New Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="main_activity_copyright_claim">\u00A9 All Rights Reserved Alentus Systems</string>

    //Room search activity
    <string name="room_list_text">Room List</string>

    //lobby activity
    <string name="lobby_players_text">Players:</string>
    <string name="start_game_button">Start Game</string>

    //Create Game Activity
    <string name="createGameActivityTextView">Create Game</string>
    <string name="createGameActivityTextView2">Number of Players:</string>
    <string name="createGameActivityTextView3">Playable Area:</string>
    <string name="createGameActivityTextView4">Play Time:</string>

    <string-array name="create_game_activity_array_list">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="create_game_activity_playablearea_list">
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>

    </string-array>

    <string-array name="create_game_activity_array_list3">
        <item>15 min</item>
        <item>30 min</item>
        <item>1 h</item>
        <item>2 h</item>
    </string-array>

    <string name="title_activity_maps">Map</string>

    //prey in-game activity
    <string name="preyInGameActivityTextView">Game in Progress</string>
    <string name="preyInGameActivityTextView2">Number of Players left:</string>
    <string name="preyInGameActivityTextView3">Placeholder Nr: 5/20</string>
    <string name="prey_in_game_power_button1">Power 1</string>
    <string name="prey_in_game_power_button2">Power 2</string>
    <string name="prey_in_game_power_button3">Power 3</string>
    <string name="prey_in_game_power_button4">Power 4</string>

</resources>
