<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/prey_in_game_power_button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/prey_in_game_power_button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prey_in_game_power_button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/prey_in_game_power_button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prey_in_game_power_button4" />

    <Button
        android:id="@+id/prey_in_game_power_button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/prey_in_game_power_button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prey_in_game_power_button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/prey_in_game_power_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prey_in_game_power_button1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/preyInGameActivityTextView"
        tools:layout_editor_absoluteX="202dp">


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/preyInGameActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preyInGameActivityTextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/preyInGameMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.MapsActivity" />

    <TextView
        android:id="@+id/preyInGameActivityTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="230dp"
        android:text="@string/preyInGameActivityTextView2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preyInGameActivityTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/preyInGameActivityTextView3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/preyInGameActivityTextView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="24" />

</androidx.constraintlayout.widget.ConstraintLayout>