<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_activity_logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="TagHunt_logo"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/create_game_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_game_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/join_game_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_activity_copyright_claim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/main_activity_copyright_claim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>